# MapReduct-lite

./: CMakeLists.txt
src/: gtest  tags
src/binary_search_tree/: CMakeLists.txt  binary_search_tree.cc  binary_search_tree.h  binary_search_tree_test.cc
src/mapreduce_lite/: CMakeLists.txt  mapreduce_lite.cc  mapreduce_lite.h  mapreduce_main.cc
src/mapreduce_lite/demo/: CMakeLists.txt
src/sorted_buffer/: sorted_buffer.cc
src/strutil/: split_string.h
